# rstvalidator.py

./: .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
rstvalidator/: __init__.py  __main__.py
tests/rstvalidator/examples/ERROR/: error.rst  run.sh
tests/valid/: run.sh  valid.rst
