# https://pypi.org/project/setupcfg-generator/
[metadata]
name = rstvalidator
version = 2019.4.13
url = https://github.com/looking-for-a-job/rstvalidator.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rst reStructuredText validator

[options]
install_requires = 
	click
	docutils
	public
	pygments
	setuptools
packages = 
	rstvalidator
